# Leetcode_Cpp

./: .gitignore  CMakeLists.txt  _128_最长连续序列  _152_乘积最大子数组  _179_最大数  _207_课程表  _224_基本计算器  _227_基本计算器2  _283_移动零  _297_二叉树的序列化与反序列化  _402_移掉K位数字  _468_验证IP地址  _47_全排列2  _字节_数组中组成小于target的最大数  冒泡排序
0.ACM模式/: _1_字符串排序2.cpp  _1_字符串排序3.cpp  _dp56_打家劫舍3.cpp
0.基础代码/: _204_计数质数.cpp
0.基础代码/排序/: 其他排序.cpp  冒泡排序.cpp  堆排序.cpp  建立最小堆处理lc23合并k个升序链表.md  快速排序.cpp
1.剑指offer/: _09_用两个栈实现队列.cpp  _22_链表中倒数第k个节点.cpp  _27_二叉树的镜像.cpp  _30_包含min函数的栈.cpp
1.数组_排序/: _128_最长连续序列.cpp  _209_长度最小的子数组.cpp  _215_数组中的第K个最大元素.cpp  _240_搜索二维矩阵2.cpp  _26_删除有序数组中的重复项.cpp  _27_移除元素.cpp  _4_寻找两个正序数组的中位数.cpp  _54_螺旋矩阵.cpp  _560_和为K的子数组.cpp  _59_螺旋矩阵II.cpp  _704_二分查找.cpp  _74_搜索二维矩阵.cpp  _75_颜色分类.cpp  _88_合并两个有序数组.cpp  _912_排序数组.cpp  _977_有序数组的平方.cpp  面试题16.16.部分排序.cpp  面试题17.14.最小K个数.cpp
1.数组_排序/数组操作/: 合并两个有序数组至新的数组.md
10.图论/: _200_岛屿数量.cpp  _463_岛屿的周长.cpp  _694_不同岛屿的数量.cpp  _695_岛屿的最大面积.cpp
11.单调栈/: _42_接雨水.cpp  _496_下一个更大元素1.cpp  _503_下一个更大元素2.cpp  _739_每日温度.cpp  _84_柱状图中最大的矩形.cpp  _85_最大矩形.cpp  单调栈理论.md
12.模拟/: _12_整数转罗马数字.cpp  _13_罗马数字转整数.cpp  _224_基本计算器.cpp  _227_基本计算器2.cpp  数组模拟栈.cpp  最小栈.cpp  用栈实现队列.cpp  链表模拟栈.cpp  队列模拟栈.cpp
15.CodeTop/: _11_盛最多水的容器.cpp  _136_只出现一次的数字.cpp  _146_LRU缓存.cpp  _153_寻找旋转排序数组中的最小值.cpp  _162_寻找峰值.cpp  _169_多数元素.cpp  _179_最大数.cpp  _207_课程表.cpp  _208_实现Trie(前缀树).cpp  _283_移动零.cpp  _2_两数相加.cpp  _31_下一个排列.cpp  _33_搜索旋转排序数组.cpp  _34_在排序数组中查找元素的第一个和最后一个位置.cpp  _367_有效的完全平方数.cpp  _402_移掉K位数字.cpp  _41_缺失的第一个正数.cpp  _440_字典序的第K小数字.cpp  _460_LFU缓存.cpp  _468_验证IP地址.cpp  _470_用Rand7()实现Rand10().cpp  _48_旋转图像.cpp  _498_对角线遍历.cpp  _540_有序数组中的单一元素.cpp  _69_x的平方根 .cpp  _76_最小覆盖子串.cpp  _8_字符串转换整数atoi.cpp  _nc311_圆环回原点.cpp  _字节_数组中组成小于target的最大数.cpp
16.多线程/: _3个线程交替打印0-100.cpp  sem_threeThreads.cpp
2.链表/: _138_复制带随机指针的链表.cpp  _138_随机链表的复制.cpp  _141_环形链表.cpp  _142_环形链表II.cpp  _143_重排链表.cpp  _147_对链表进行插入排序.cpp  _148_排序链表.cpp  _160_相交链表.cpp  _19_删除链表的倒数第N个结点.cpp  _203_移除链表元素.cpp  _206_反转链表.cpp  _21_合并两个有序链表.cpp  _234_回文链表.cpp  _23_合并K个升序链表.cpp  _24_两两交换链表中的节点.cpp  _25_K个一组翻转链表.cpp  _2_两数相加.cpp  _707_设计链表.cpp  _82_删除排序链表中的重复元素2.cpp  _83_删除排序链表中的重复元素.cpp  _86_分隔链表.cpp  _92_反转链表2.cpp  _nc207_排序奇升偶降链表.cpp  复制一个单链表.cpp  快慢指针找单链表中间结点.cpp  链表操作.md  链表结构体和打印链表.hpp
3.栈和队列/: _1047_删除字符串中的所有相邻重复项.cpp  _150_逆波兰表达式求值.cpp  _155_最小栈.cpp  _20_有效的括号.cpp  _225_用队列实现栈.cpp  _232_用栈实现队列.cpp  _239_滑动窗口最大值.cpp  _239_滑动窗口最大值_重写.cpp  _347_前K个高频元素.cpp  _654_最大二叉树.cpp  _678_有效的括号字符串.cpp  _946_验证栈序列.cpp  _LCR_125_图书整理2.cpp  copy.cpp
4.二叉树/: LCR155 将二叉搜索树转化为排序的双向链表.cpp  _100_相同的树.cpp  _101_对称二叉树.cpp  _102_二叉树的层序遍历.cpp  _103_二叉树的锯齿形层序遍历.cpp  _104_二叉树的最大深度.cpp  _105_从前序与中序遍历序列构造二叉树.cpp  _106_从中序与后序遍历序列构造二叉树.cpp  _108_将有序数组转换为二叉搜索树.cpp  _109_有序链表转换二叉搜索树.cpp  _110_平衡二叉树.cpp  _111_二叉树的最小深度.cpp  _112_路径总和.cpp  _113_路径总和2.cpp  _114_二叉树展开为链表.cpp  _124_二叉树中的最大路径和.cpp  _129_求根节点到叶节点数字之和.cpp  _144_二叉树的前序遍历.cpp  _145_二叉树的后序遍历.cpp  _199plus_二叉树的俯视图.cpp  _226_翻转二叉树.cpp  _236_二叉树的最近公共祖先.cpp  _297_二叉树的序列化与反序列化.cpp  _426_二叉搜索树转换为双向链表.cpp  _437_路径总和3.cpp  _543_二叉树的直径.cpp  _572_另一棵树的子树.cpp  _662_二叉树最大宽度.cpp  _94_二叉树的中序遍历.cpp  _987_二叉树的垂序遍历.cpp  _98_验证二叉搜索树.cpp  nc_二叉树的个数.cpp  二叉树.md  二叉树结构体.hpp
4.二叉树/层序遍历模板题/: _107_二叉树的层次遍历II.cpp  _116_填充每个节点右侧节点指针.cpp  _117_填充每个节点右侧节点指针 II.cpp  _199_二叉树的右视图.cpp  _199_扩展-二叉树的俯视图和仰视图.md  _429_N叉树的层序遍历.cpp  _515_在每个树行中找最大值.cpp  _637_二叉树的层平均值.cpp
5.字符串/: _125_验证回文串.cpp  _14_最长公共前缀.cpp  _151_反转字符串中的单词.cpp  _165_比较版本号.cpp  _340_至多包含K个不同字符的最长子串.cpp  _344_反转字符串.cpp  _394_字符串解码.cpp  _395_至少有K个重复字符的最长子串.cpp  _3_无重复字符的最长子串.cpp  _415_字符串相加.cpp  _43_字符串相乘.cpp  _443_压缩字符串.cpp  _541_反转字符串II.cpp  _680_验证回文串2.cpp  _9_回文数.cpp  字符串转换为数字.md  难题.md
6.哈希表/: _15_三数之和.cpp  _167_两数之和II-输入有序数组.cpp  _16_最接近的三数之和.cpp  _18_四数之和.cpp  _1_两数之和.cpp  _242_有效的字母异位词.cpp  _349_两个数组的交集.cpp  _454_四数相加Ⅱ.cpp  _6_四数之和.cpp
7.回溯算法/: _131_分割回文串.cpp  _17_电话号码的字母组合.cpp  _216_组合总和3.cpp  _22_括号生成.cpp  _37_解数独.cpp  _39_组合总和.cpp  _40_组合总和2.cpp  _46_全排列.cpp  _47_全排列2.cpp  _491_递增子序列.cpp  _51_N皇后.cpp  _77_组合.cpp  _78_子集.cpp  _90_子集2.cpp  _93_复原IP地址.cpp  回溯基础理论.md
8.贪心算法/: _376_摆动序列.cpp  _455_分发饼干.cpp  _45_跳跃游戏2.cpp  _55_跳跃游戏.cpp  _56_合并区间.cpp
9.动态规划/: _1035_不相交的线.cpp  _1143_最长公共子序列.cpp  _115_不同的子序列.cpp  _152_乘积最大子数组.cpp  _221_最大正方形.cpp  _300_最长递增子序列.cpp  _32_最长有效括号.cpp  _343_整数拆分.cpp  _392_判断子序列.cpp  _516_最长回文子序列.cpp  _53_最大子数组和.cpp  _583_两个字符串的删除操作.cpp  _5_最长回文子串.cpp  _62_不同路径.cpp  _63_不同路径II.cpp  _647_回文子串.cpp  _64_最小路径和.cpp  _674_最长连续递增序列.cpp  _718_最长重复子数组.cpp  _72_编辑距离.cpp  _72_编辑距离2_牛客nc35.cpp  _96_不同的二叉搜索树.cpp  动态规划基础.md
9.动态规划/1动态规划基础/: _509_斐波那契数.cpp  _70_爬楼梯.cpp
9.动态规划/买卖股票/: _121_买卖股票的最佳时机.cpp  _122_买卖股票的最佳时机2.cpp  _123_买卖股票的最佳时机3.cpp  _188_买卖股票的最佳时机4.cpp  买卖股票.md
9.动态规划/打家劫舍/: _198_打家劫舍.cpp  _213_打家劫舍2.cpp  _337_打家劫舍3.cpp
9.动态规划/背包问题/: _1049_最后一块石头的重量2.cpp  _139_单词拆分.cpp  _279_完全平方数.cpp  _322_零钱兑换.cpp  _377_组合总和4.cpp  _416_分割等和子集.cpp  _474_一和零.cpp  _494_目标和.cpp  _518_零钱兑换2.cpp  背包问题题目.md
模板/: 二分查找.cpp
每周必刷题-背下来/: 二分查找.md  二叉树.md  单调栈.md  回溯.md  字符串.md  滑动窗口.md  链表.md
面试遇见的算法题/: _code_.cpp  字节.md
